RESOLVED FIXED302797
StreamTeeState should not take JSC::Strong for cancel reasons
https://bugs.webkit.org/show_bug.cgi?id=302797
Summary StreamTeeState should not take JSC::Strong for cancel reasons
youenn fablet
Reported 2025-11-19 09:33:46 PST
StreamTeeState should not take JSC::Strong for cancel reasons
Attachments
youenn fablet
Comment 1 2025-11-19 09:34:02 PST
youenn fablet
Comment 2 2025-11-19 23:14:05 PST
youenn fablet
Comment 3 2025-11-21 02:08:08 PST
EWS
Comment 4 2025-11-24 01:52:01 PST
Committed 303481@main (127ad248be85): <https://commits.webkit.org/303481@main> Reviewed commits have been landed. Closing PR #54304 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.